--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     tools:context=".LoginActivity">
 
     <Button
-        android:id="@+id/btnLogin3"
+        android:id="@+id/btnRegister"
         android:layout_width="97dp"
         android:layout_height="50dp"
         android:backgroundTint="#2980B9"
