refactor(LoginActity): add labelFor attribute

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:backgroundTint="#2980B9"
         android:fontFamily="@font/roboto_regular"
-        android:text="SIGN UP"
+        android:text="@string/sign_up"
         android:textColor="#FFFFFF"
         android:typeface="normal"
         android:visibility="visible"
@@ -24,19 +24,20 @@
         app:layout_constraintVertical_bias="0.942" />
 
     <TextView
-        android:id="@+id/labelLogin"
+        android:id="@+id/labelPassword"
         android:layout_width="wrap_content"
+        android:labelFor="@+id/editPassword"
         android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="140dp"
         android:fontFamily="@font/roboto_light"
-        android:text="Username"
+        android:text="@string/password"
         android:textColor="#000000"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/editEmail"
+        app:layout_constraintBottom_toTopOf="@+id/editPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/editEmail"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editPassword"
@@ -75,11 +76,28 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="112dp"
         android:fontFamily="@font/roboto_light"
-        android:text="Don't have account?"
+        android:text="@string/don_t_have_account"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="605dp" />
+        tools:layout_editor_absoluteY="605dp"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/labelLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="176dp"
+        android:layout_marginEnd="136dp"
+        android:fontFamily="@font/roboto_light"
+        android:text="@string/username"
+        android:textColor="#000000"
+        android:labelFor="@+id/editEmail"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/editEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/editEmail"
@@ -88,7 +106,7 @@
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,20 +114,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.291" />
-
-    <TextView
-        android:id="@+id/labelPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="140dp"
-        android:fontFamily="@font/roboto_light"
-        android:text="@string/password"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/editPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editEmail"
-        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
